[package]
name = "c21_counter_rs"
version = "0.1.0"
authors = ["goldp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
toml = "*"
lazy_static = "*"
encoding = "*"
serde = {version="*",features=["derive"]}
sysinfo = "*"
ureq = "*"
webbrowser = "*"
actix = "*"
actix-web="*"
sailfish="*"
