[package]
name = "c21_counter_rs"
version = "0.1.0"
authors = ["goldp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "*"
chrono="*"
encoding = "*"
lazy_static = "*"
regex = "*"
sailfish = "*"
serde = { version = "*", features = ["derive"] }
sysinfo = "*"
toml = "*"
ureq = "*"
webbrowser = "*"
